feat(home): implemented script in home

--- a/home.html
+++ b/home.html
@@ -19,7 +19,8 @@
         <button type="button">Aggiungi materia +</button>
         <button type="button">Aggiungi studente +</button>
     </div>
-
+    <script type="module" src="register.js"></script>
+    <script type="module" src="student.js"></script>
 </body>
 
 </html>
