--- a/registro.html
+++ b/registro.html
@@ -4,24 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <title>Registro</title>
 </head>
 
 <body>
-    <label for="materia"></label>
+    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Team B</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Studenti</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Registri
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Italiano</a>
+                <a class="dropdown-item" href="#">Matematica</a>
+                <a class="dropdown-item" href="#">Inglese</a>
+                <a class="dropdown-item" href="#">Scienza</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <h2>qui andrà la materia</h2>
+    <!--<label for="materia"></label>
     <select id="materia" name="materia">
         <option value="seleziona">Seleziona materia</option>
         <option value="italiano">Italiano</option>
         <option value="inglese">Inglese</option>
         <option value="scienza">Scienza</option>
         <option value="matematica">Matematica</option>
-    </select>
+    </select>-->
     <div>
-        <button onclick="previousDay()"><</button>
-        <id="dateDisplay"> <span id="currentDate">2023-12-16</span></id=>
-        <button onclick="nextDay()">></button>
+        <button onclick="previousDay()">
+            <</button>
+                <id="dateDisplay"> <span id="currentDate">2023-12-18</span></id=>
+                    <button onclick="nextDay()">></button>
     </div>
-    <table>
+    <table class="table">
         <tr>
             <th>Studente <button type="button">+</button></th>
             <th>Presenza</th>
@@ -39,6 +80,15 @@
             <td></td>
         </tr>
     </table>
+    <aside>
+        <form action="/action_page.php">
+            <p><label for="w3review">Argomento della giornata:</label></p>
+            <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
+    </aside>
+</div>
 </body>
 
 </html>
