--- a/registro.html
+++ b/registro.html
@@ -19,36 +19,39 @@
 </head>
 
 <body>
-    <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Team B</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Studenti</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Registri
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Italiano</a>
-                <a class="dropdown-item" href="#">Matematica</a>
-                <a class="dropdown-item" href="#">Inglese</a>
-                <a class="dropdown-item" href="#">Scienza</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <h2>qui andrà la materia</h2>
-    <!--<label for="materia"></label>
+    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Team B</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Studenti</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Registri
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Italiano</a>
+                            <a class="dropdown-item" href="#">Matematica</a>
+                            <a class="dropdown-item" href="#">Inglese</a>
+                            <a class="dropdown-item" href="#">Scienza</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+        <h2>qui andrà la materia</h2>
+        <!--<label for="materia"></label>
     <select id="materia" name="materia">
         <option value="seleziona">Seleziona materia</option>
         <option value="italiano">Italiano</option>
@@ -56,39 +59,44 @@
         <option value="scienza">Scienza</option>
         <option value="matematica">Matematica</option>
     </select>-->
-    <div>
-        <button onclick="previousDay()">
-            <</button>
-                <id="dateDisplay"> <span id="currentDate">2023-12-18</span></id=>
-                    <button onclick="nextDay()">></button>
-    </div>
-    <table class="table">
-        <tr>
-            <th>Studente <button type="button">+</button></th>
-            <th>Presenza</th>
-            <th>Orario entrata</th>
-            <th>Orario uscita</th>
-            <th>Compito</th>
-            <th>Voto</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="radio" id="presenza" name="presenza" value="presenza"></td>
-            <td></td>
-            <td></td>
-            <td><input type="radio" id="compito" name="compito" value="compito"></td>
-            <td></td>
-        </tr>
-    </table>
-    <aside>
-        <form action="/action_page.php">
-            <p><label for="w3review">Argomento della giornata:</label></p>
-            <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
-            <br>
-            <input type="submit" value="Submit">
-        </form>
-    </aside>
-</div>
+        <div>
+            <button onclick="previousDay()">
+                <</button>
+                    <id="dateDisplay"> <span id="currentDate">2023-12-18</span></id=>
+                        <button onclick="nextDay()">></button>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <table class="table">
+                    <tr>
+                        <th>Studente <button type="button">+</button></th>
+                        <th>Presenza</th>
+                        <th>Orario entrata</th>
+                        <th>Orario uscita</th>
+                        <th>Compito</th>
+                        <th>Voto</th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><input type="radio" id="presenza" name="presenza" value="presenza"></td>
+                        <td></td>
+                        <td></td>
+                        <td><input type="radio" id="compito" name="compito" value="compito"></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-4">
+                <aside>
+                    <form action="/action_page.php">
+                        <p><label for="w3review">Argomento della giornata:</label></p>
+                        <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
+                        <br>
+                        <input type="aggiungi" value="Aggiungi">
+                    </form>
+                </aside>
+            </div>
+        </div>
 </body>
 
 </html>
