--- a/registro.html
+++ b/registro.html
@@ -97,6 +97,8 @@
                 </aside>
             </div>
         </div>
+    <script type="module" src="register.js"></script>
+    <script type="module" src="student.js"></script>
 </body>
 
 </html>
