feat(home): add style to home

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
     <title>Home</title>
 </head>
 
@@ -16,8 +17,8 @@
         <button type="button">Scienza</button>
     </div>
     <div>
-        <button type="button">Aggiungi materia +</button>
-        <button type="button">Aggiungi studente +</button>
+        <button type="button+">Aggiungi materia +</button>
+        <button type="button+">Aggiungi studente +</button>
     </div>
     <script type="module" src="register.js"></script>
     <script type="module" src="student.js"></script>
