--- a/home.html
+++ b/home.html
@@ -58,8 +58,32 @@
     </div>
     <br>
     <div>
-        <button type="button+" class="btn btn-primary btn-lg">Aggiungi materia +</button>
+        <button type="button+" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Aggiungi materia +</button>
         <button type="button+" class="btn btn-primary btn-lg">Aggiungi studente +</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Aggiungi materia</h5>
+                  <button type="button+" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="recipient-name" class="col-form-label">Materia</label>
+                      <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Esci</button>
+                  <button type="button" class="btn btn-primary">Crea materia</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
     <script type="module" src="register.js"></script>
     <script type="module" src="student.js"></script>
