--- a/home.html
+++ b/home.html
@@ -86,17 +86,24 @@
           type="button+"
           class="btn btn-primary"
           data-toggle="modal"
-          data-target="#exampleModal"
+          data-target="#addMateriaModal"
           data-whatever="@mdo"
         >
           Aggiungi materia +
         </button>
-        <button type="button+" class="btn btn-primary btn-lg">
+        <button
+          type="button+"
+          class="btn btn-primary btn-lg"
+          data-toggle="modal"
+          data-target="#addStudentModal"
+          data-whatever="@mdo"
+        >
           Aggiungi studente +
         </button>
+        <!--MODALE ADD MATERIA-->
         <div
           class="modal fade"
-          id="exampleModal"
+          id="addMateriaModal"
           tabindex="-1"
           role="dialog"
           aria-labelledby="exampleModalLabel"
@@ -151,9 +158,87 @@
             </div>
           </div>
         </div>
+        <!--MODALE ADD STUDENTE-->
+        <div
+          class="modal fade"
+          id="addStudentModal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">
+                  Aggiungi materia
+                </h5>
+                <button
+                  type="button+"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="student-name" class="col-form-label"
+                      >Nome</label
+                    >
+                    <input type="text" class="form-control" id="student-name" />
+                    <label for="student-lastName" class="col-form-label"
+                      >lastName</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="student-lastName"
+                    />
+                    <label for="student-email" class="col-form-label"
+                      >Email</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="student-email"
+                    />
+                    <label for="student-phoneNumber" class="col-form-label"
+                      >PhoneNumber</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="student-phoneNumber"
+                    />
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Esci
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="btnCreateStudent"
+                  data-dismiss="modal"
+                >
+                  Crea studente
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <script type="module" src="register.js"></script>
-      <script type="module" src="student.js"></script>
+      <script type="module" src="studentList.js"></script>
       <script type="module" src="controller.js"></script>
     </div>
   </body>
