--- a/home.html
+++ b/home.html
@@ -238,7 +238,7 @@
         </div>
       </div>
       <script type="module" src="register.js"></script>
-      <script type="module" src="studentList.js"></script>
+      <script type="module" src="student.js"></script>
       <script type="module" src="controller.js"></script>
     </div>
   </body>
