feat(app): add add student modal to registro, add logic to manage multiple file html, fix app

--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
-              href="#"
+              href=""
               id="navbarDropdownMenuLink"
               data-toggle="dropdown"
               aria-haspopup="true"
@@ -63,7 +63,7 @@
               Registri
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Italiano</a>
+              <a class="dropdown-item" href="registro.html">Italiano</a>
               <a class="dropdown-item" href="#">Matematica</a>
               <a class="dropdown-item" href="#">Inglese</a>
               <a class="dropdown-item" href="#">Scienza</a>
@@ -171,7 +171,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">
-                  Aggiungi materia
+                  Aggiungi studente
                 </h5>
                 <button
                   type="button+"
