feat(registro): fixed add button

--- a/registro.html
+++ b/registro.html
@@ -144,7 +144,7 @@
                 cols="50"
               ></textarea>
               <br />
-              <input type="aggiungi" value="Aggiungi" />
+              <input type="button" value="Aggiungi" />
             </form>
           </aside>
         </div>
