feat(app): function to load the correct subject on click into the view

--- a/registro.html
+++ b/registro.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
     <div class="container">
-      <h2>qui andrà la materia</h2>
+      <h2 id="hmatter"></h2>
       <!--<label for="materia"></label>
         <select id="materia" name="materia">
         <option value="seleziona">Seleziona materia</option>
