feat(app): created structure studenti.html

--- a/home.html
+++ b/home.html
@@ -190,7 +190,7 @@
                     >
                     <input type="text" class="form-control" id="student-name" />
                     <label for="student-lastName" class="col-form-label"
-                      >lastName</label
+                      >Cognome</label
                     >
                     <input
                       type="text"
@@ -206,7 +206,7 @@
                       id="student-email"
                     />
                     <label for="student-phoneNumber" class="col-form-label"
-                      >PhoneNumber</label
+                      >Telefono</label
                     >
                     <input
                       type="text"
