feat(app): add function to populate register table and add fix code

--- a/registro.html
+++ b/registro.html
@@ -1,80 +1,80 @@
 <!DOCTYPE html>
 <html lang="it">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
-		<title>Registro</title>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <title>Registro</title>
+  </head>
 
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Team B</a>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="#"
-							>Home <span class="sr-only">(current)</span></a
-						>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Studenti</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdownMenuLink"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Registri
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Italiano</a>
-							<a class="dropdown-item" href="#">Matematica</a>
-							<a class="dropdown-item" href="#">Inglese</a>
-							<a class="dropdown-item" href="#">Scienza</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<div class="container">
-			<h2 id="hmatter"></h2>
-			<!--<label for="materia"></label>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Team B</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Studenti</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Registri
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Italiano</a>
+              <a class="dropdown-item" href="#">Matematica</a>
+              <a class="dropdown-item" href="#">Inglese</a>
+              <a class="dropdown-item" href="#">Scienza</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <h2 id="hmatter"></h2>
+      <!--<label for="materia"></label>
         <select id="materia" name="materia">
         <option value="seleziona">Seleziona materia</option>
         <option value="italiano">Italiano</option>
@@ -82,111 +82,157 @@
         <option value="scienza">Scienza</option>
         <option value="matematica">Matematica</option>
       </select>-->
-			<div>
-				<button onclick="previousDay()">-</button>
-				<div id="dateDisplay"><span id="currentDate">2023-12-18</span></div>
-				<button onclick="nextDay()">+</button>
-			</div>
-			<div class="row">
-				<div class="col-8">
-					<table class="table">
-						<tr>
-							<th id="ciao">
-								Studente
-								<button
-									type="button"
-									data-toggle="modal"
-									href="#addSModal"
-									class="btn btn-primary btn-lg"
-									id="btnOpenMod"
-								>
-									+
-								</button>
-							</th>
-							<th>Presenza</th>
-							<th>Orario entrata</th>
-							<th>Orario uscita</th>
-							<th>Compito</th>
-							<th>Voto</th>
-						</tr>
-						<tr>
-							<td></td>
-							<td>
-								<input
-									type="radio"
-									id="presenza"
-									name="presenza"
-									value="presenza"
-								/>
-							</td>
-							<td></td>
-							<td></td>
-							<td>
-								<input
-									type="radio"
-									id="compito"
-									name="compito"
-									value="compito"
-								/>
-							</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="col-4">
-					<aside>
-						<form action="/action_page.php">
-							<p><label for="w3review">Argomento della giornata:</label></p>
-							<textarea
-								id="w3review"
-								name="w3review"
-								rows="4"
-								cols="50"
-							></textarea>
-							<br />
-							<input type="button" value="Aggiungi" />
-						</form>
-					</aside>
-				</div>
-			</div>
-		</div>
-		<!--MODALE ADD student-->
-		<div
-			class="modal fade"
-			id="addSModal"
-			tabindex="-1"
-			role="dialog"
-			aria-labelledby="exampleModalLabel"
-			aria-hidden="true"
-		>
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">
-							Aggiungi studente
-						</h5>
-						<button
-							type="button+"
-							class="close"
-							data-dismiss="modal"
-							aria-label="Close"
-						>
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						<table class="table">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">First</th>
-									<th scope="col">Last</th>
-									<th scope="col">Email</th>
-									<th scope="col">Phone</th>
-								</tr>
-							</thead>
-							<tbody id="tBodyAdd">
-								<!--<tr>
+      <div>
+        <button onclick="previousDay()">-</button>
+        <div id="dateDisplay"><span id="currentDate">2023-12-18</span></div>
+        <button onclick="nextDay()">+</button>
+      </div>
+      <div class="row">
+        <div class="col-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col" id="ciao">
+                  Studente
+                  <button
+                    type="button"
+                    data-toggle="modal"
+                    href="#addSModal"
+                    class="btn btn-primary btn-lg"
+                    id="btnOpenMod"
+                  >
+                    +
+                  </button>
+                </th>
+                <th scope="col">Presenza</th>
+                <th scope="col">Orario Entrata</th>
+                <th scope="col">Orario Uscita</th>
+                <th scope="col">Compito</th>
+                <th scope="col">Voto</th>
+              </tr>
+            </thead>
+            <tbody id="tBodyReg">
+              <!--<tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>328101556</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>328101556</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+                <td>328101556</td>
+              </tr>-->
+            </tbody>
+          </table>
+          <!--<table class="table">
+            <tr>
+              <th id="ciao">
+                Studente
+                <button
+                  type="button"
+                  data-toggle="modal"
+                  href="#addSModal"
+                  class="btn btn-primary btn-lg"
+                  id="btnOpenMod"
+                >
+                  +
+                </button>
+              </th>
+              <th>Presenza</th>
+              <th>Orario entrata</th>
+              <th>Orario uscita</th>
+              <th>Compito</th>
+              <th>Voto</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                <input
+                  type="radio"
+                  id="presenza"
+                  name="presenza"
+                  value="presenza"
+                />
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <input
+                  type="radio"
+                  id="compito"
+                  name="compito"
+                  value="compito"
+                />
+              </td>
+              <td></td>
+            </tr>
+          </table>-->
+        </div>
+        <div class="col-4">
+          <aside>
+            <form action="/action_page.php">
+              <p><label for="w3review">Argomento della giornata:</label></p>
+              <textarea
+                id="w3review"
+                name="w3review"
+                rows="4"
+                cols="50"
+              ></textarea>
+              <br />
+              <input type="button" value="Aggiungi" />
+            </form>
+          </aside>
+        </div>
+      </div>
+    </div>
+    <!--MODALE ADD student-->
+    <div
+      class="modal fade"
+      id="addSModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Aggiungi studente
+            </h5>
+            <button
+              type="button+"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Phone</th>
+                </tr>
+              </thead>
+              <tbody id="tBodyAdd">
+                <!--<tr>
                   <th scope="row">1</th>
                   <td>Mark</td>
                   <td>Otto</td>
@@ -207,31 +253,31 @@
                   <td>@twitter</td>
                   <td>328101556</td>
                 </tr>-->
-							</tbody>
-						</table>
-					</div>
-					<div class="modal-footer">
-						<button
-							type="button"
-							class="btn btn-secondary"
-							data-dismiss="modal"
-						>
-							Esci
-						</button>
-						<button
-							type="button"
-							class="btn btn-primary"
-							id="btnCreateRegister"
-							data-dismiss="modal"
-						>
-							Crea materia
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script type="module" src="register.js"></script>
-		<script type="module" src="student.js"></script>
-		<script type="module" src="controller.js"></script>
-	</body>
+              </tbody>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Esci
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="btnCreateRegister"
+              data-dismiss="modal"
+            >
+              Crea materia
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="module" src="register.js"></script>
+    <script type="module" src="student.js"></script>
+    <script type="module" src="controller.js"></script>
+  </body>
 </html>
