feat(register): add function to connect lessonday to view register

--- a/registro.html
+++ b/registro.html
@@ -83,9 +83,14 @@
         <option value="matematica">Matematica</option>
       </select>-->
       <div>
-        <button onclick="previousDay()">-</button>
+        <label for="datepicker">Select Date:</label>
+        <input type="date" id="datepicker" />
+
+        <button class="btn-prev btn btn-primary">Previous</button>
+        <button class="btn-next btn btn-primary">Next</button>
+        <!--<button onclick="previousDay()">-</button>
         <div id="dateDisplay"><span id="currentDate">2023-12-18</span></div>
-        <button onclick="nextDay()">+</button>
+        <button onclick="nextDay()">+</button>-->
       </div>
       <div class="row">
         <div class="col-8">
