fix(register): fix modal to add students to matter

--- a/registro.html
+++ b/registro.html
@@ -210,7 +210,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">
@@ -225,7 +225,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body mx-auto">
             <table class="table">
               <thead>
                 <tr>
@@ -234,6 +234,7 @@
                   <th scope="col">Last</th>
                   <th scope="col">Email</th>
                   <th scope="col">Phone</th>
+                  <th scope="col">Select</th>
                 </tr>
               </thead>
               <tbody id="tBodyAdd">
@@ -275,7 +276,7 @@
               id="btnCreateRegister"
               data-dismiss="modal"
             >
-              Crea materia
+              Inserisci studenti selezionati
             </button>
           </div>
         </div>
