feat(register): add function to modify data student in the table row

--- a/registro.html
+++ b/registro.html
@@ -88,6 +88,7 @@
 
         <button class="btn-prev btn btn-primary">Previous</button>
         <button class="btn-next btn btn-primary">Next</button>
+        <button class="btn-lesson btn btn-primary">Registra lezione</button>
         <!--<button onclick="previousDay()">-</button>
         <div id="dateDisplay"><span id="currentDate">2023-12-18</span></div>
         <button onclick="nextDay()">+</button>-->
@@ -114,6 +115,7 @@
                 <th scope="col">Orario Uscita</th>
                 <th scope="col">Compito</th>
                 <th scope="col">Voto</th>
+                <th scope="col">Modify</th>
               </tr>
             </thead>
             <tbody id="tBodyReg">
