feat(app): adjusted home interface graphics and implemented a feature to view registers in the navbar.

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <title>Home</title>
   </head>
 
-  <body>
+  <body style="background-image: url(https://www.wallpapertip.com/wmimgs/40-405583_high-resolution-white-background-hd.jpg);">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Team B</a>
       <button
@@ -62,11 +62,8 @@
             >
               Registri
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="registro.html">Italiano</a>
-              <a class="dropdown-item" href="#">Matematica</a>
-              <a class="dropdown-item" href="#">Inglese</a>
-              <a class="dropdown-item" href="#">Scienza</a>
+            <div id="divMenu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              
             </div>
           </li>
         </ul>
@@ -75,10 +72,7 @@
     <div class="container">
       <h1>Benvenuto nel portale scolastico</h1>
       <div id="divButtonMatter">
-        <!--<button type="button" class="btn btn-primary btn-lg">Italiano</button>
-        <button type="button" class="btn btn-primary btn-lg">Matematica</button>
-        <button type="button" class="btn btn-primary btn-lg">Inglese</button>
-        <button type="button" class="btn btn-primary btn-lg">Scienza</button>-->
+        
       </div>
       <br />
       <div>
