feat(app): added background and changed delete button color

--- a/registro.html
+++ b/registro.html
@@ -27,7 +27,7 @@
     <title>Registro</title>
   </head>
 
-  <body>
+  <body style="background-image: url(https://www.wallpapertip.com/wmimgs/40-405583_high-resolution-white-background-hd.jpg);">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Team B</a>
       <button
