feat(app): added function to view register on dropdown list nav

--- a/studenti.html
+++ b/studenti.html
@@ -62,11 +62,11 @@
             >
               Registri
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="registro.html">Italiano</a>
+            <div id="divMenu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <!--<a class="dropdown-item" href="registro.html">Italiano</a>
               <a class="dropdown-item" href="#">Matematica</a>
               <a class="dropdown-item" href="#">Inglese</a>
-              <a class="dropdown-item" href="#">Scienza</a>
+              <a class="dropdown-item" href="#">Scienza</a>-->
             </div>
           </li>
         </ul>
