fix(app): changed button graphics

--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
       <div>
         <button
           type="button+"
-          class="btn btn-primary"
+          class="btn btn-outline-primary"
           data-toggle="modal"
           data-target="#addMateriaModal"
           data-whatever="@mdo"
@@ -126,14 +126,14 @@
               <div class="modal-footer">
                 <button
                   type="button"
-                  class="btn btn-secondary"
+                  class="btn btn-outline-secondary"
                   data-dismiss="modal"
                 >
                   Esci
                 </button>
                 <button
                   type="button"
-                  class="btn btn-primary"
+                  class="btn btn-outline-primary"
                   id="btnCreateRegister"
                   data-dismiss="modal"
                 >
