--- a/studenti.html
+++ b/studenti.html
@@ -63,10 +63,7 @@
               Registri
             </a>
             <div id="divMenu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <!--<a class="dropdown-item" href="registro.html">Italiano</a>
-              <a class="dropdown-item" href="#">Matematica</a>
-              <a class="dropdown-item" href="#">Inglese</a>
-              <a class="dropdown-item" href="#">Scienza</a>-->
+              
             </div>
           </li>
         </ul>
@@ -76,7 +73,7 @@
       <div class="row">
         <button
           type="button+"
-          class="btn btn-primary btn-lg"
+          class="btn btn-outline-primary btn-lg"
           data-toggle="modal"
           data-target="#addStudentModal"
           data-whatever="@mdo"
@@ -157,14 +154,14 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
+              class="btn btn-outline-secondary"
               data-dismiss="modal"
             >
               Esci
             </button>
             <button
               type="button"
-              class="btn btn-primary"
+              class="btn btn-outline-primary"
               id="btnCreateStudent"
               data-dismiss="modal"
             >
