--- a/studenti.html
+++ b/studenti.html
@@ -1,178 +1,241 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <title>Home</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"
+		></script>
+		<title>Home</title>
+	</head>
 
-  <body style="background-image: url(https://www.wallpapertip.com/wmimgs/40-405583_high-resolution-white-background-hd.jpg);">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Team B</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="home.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="studenti.html">Studenti</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href=""
-              id="navbarDropdownMenuLink"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Registri
-            </a>
-            <div id="divMenu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">
-      <div class="row">
-        <button
-          type="button+"
-          class="btn btn-outline-primary btn-lg"
-          data-toggle="modal"
-          data-target="#addStudentModal"
-          data-whatever="@mdo"
-        >
-          Aggiungi studente +
-        </button>
-      </div>
-      <div clas="row">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">id</th>
-              <th scope="col">Nome</th>
-              <th scope="col">Cognome</th>
-              <th scope="col">Email</th>
-              <th scope="col">Telefono</th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody id="tBodyStd">
-            <tr>
-              <th scope="row"></th>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <!--MODALE ADD STUDENTE-->
-    <div
-      class="modal fade"
-      id="addStudentModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Aggiungi studente
-            </h5>
-            <button
-              type="button+"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="student-name" class="col-form-label">Nome</label>
-                <input type="text" class="form-control" id="student-name" />
-                <label for="student-lastName" class="col-form-label"
-                  >lastName</label
-                >
-                <input type="text" class="form-control" id="student-lastName" />
-                <label for="student-email" class="col-form-label">Email</label>
-                <input type="text" class="form-control" id="student-email" />
-                <label for="student-phoneNumber" class="col-form-label"
-                  >PhoneNumber</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="student-phoneNumber"
-                />
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-outline-secondary"
-              data-dismiss="modal"
-            >
-              Esci
-            </button>
-            <button
-              type="button"
-              class="btn btn-outline-primary"
-              id="btnCreateStudent"
-              data-dismiss="modal"
-            >
-              Crea studente
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script type="module" src="register.js"></script>
-    <script type="module" src="student.js"></script>
-    <script type="module" src="controller.js"></script>
-  </body>
+	<body
+		style="
+			background-image: url(https://www.wallpapertip.com/wmimgs/40-405583_high-resolution-white-background-hd.jpg);
+		"
+	>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Team B</a>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="home.html"
+							>Home <span class="sr-only">(current)</span></a
+						>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="studenti.html">Studenti</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a
+							class="nav-link dropdown-toggle"
+							href=""
+							id="navbarDropdownMenuLink"
+							data-toggle="dropdown"
+							aria-haspopup="true"
+							aria-expanded="false"
+						>
+							Registri
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="registro.html">Italiano</a>
+							<a class="dropdown-item" href="#">Matematica</a>
+							<a class="dropdown-item" href="#">Inglese</a>
+							<a class="dropdown-item" href="#">Scienza</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container">
+			<div class="row">
+				<button
+					type="button+"
+					class="btn btn-primary btn-lg"
+					data-toggle="modal"
+					data-target="#addStudentModal"
+					data-whatever="@mdo"
+				>
+					Aggiungi studente +
+				</button>
+			</div>
+			<div clas="row">
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">id</th>
+							<th scope="col">Nome</th>
+							<th scope="col">Cognome</th>
+							<th scope="col">Email</th>
+							<th scope="col">Telefono</th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+						</tr>
+					</thead>
+					<tbody id="tBodyStd">
+						<tr>
+							<th scope="row"></th>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!--MODALE ADD STUDENTE-->
+		<div
+			class="modal fade"
+			id="addStudentModal"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="exampleModalLabel"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">
+							Aggiungi studente
+						</h5>
+						<button
+							type="button+"
+							class="close"
+							data-dismiss="modal"
+							aria-label="Close"
+						>
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form id="student-form">
+							<div class="form-group">
+								<label for="student-name" class="col-form-label">Nome</label>
+								<input type="text" class="form-control" id="student-name" />
+								<label for="student-lastName" class="col-form-label"
+									>Cognome</label
+								>
+								<input type="text" class="form-control" id="student-lastName" />
+								<!-- <label for="student-email" class="col-form-label">Email</label>
+                <input type="text" class="form-control" id="student-email" /> -->
+
+								<!-- <label for="student-email">Enter your example.com email:</label>
+								<input
+									type="text"
+									id="student-email"
+									pattern="[a-zA-Z]{3,}@[a-zA-Z]{3,}[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,}"
+									required
+									placeholder="Enter student Email"
+								/> -->
+								<!-- //////////////////////////////
+
+								<input
+									type="text"
+									id="student-email"
+									pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+									size="30"
+									required
+								/> -->
+								<!-- versione di gpt -->
+								<label for="student-email">Enter your example.com email:</label>
+								<input
+									type="email"
+									id="student-email"
+									pattern=".+@bestemail\.com"
+									size="30"
+									required
+								/>
+								<br />
+								<!-- size="30"
+									required -->
+
+								<label for="student-phoneNumber" class="col-form-label">
+									Student PhoneNumber</label
+								>
+								<input
+									type="tel"
+									class="form-control"
+									id="student-phoneNumber"
+									pattern="(\+?[0-9]{1,4}-?)?[0-9]{3}-[0-9]{3}-[0-9]{4}"
+									minlength="13"
+									maxlength="13"
+									required
+								/>
+								<small> Format : +39-123-456-7890</small>
+							</div>
+						</form>
+						<!-- sezione javascript per validare il form perchè altrimenti mi blocca i required del form -->
+						<script>
+							function validateAndCloseModal() {
+								var form = document.getElementById("student-form");
+
+								if (form.checkValidity()) {
+									closeModal();
+								} else {
+									alert(
+										"Il modulo non è valido. Controlla i campi obbligatori."
+									);
+								}
+							}
+							/* function closeModal() {
+    } */
+						</script>
+						<!-- bottone per chiudere la modale perchè altrimenti non si filava i required -->
+						<button onclick="validateAndCloseModal()">
+							conferma l'aggiunta studente
+						</button>
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							data-dismiss="modal"
+						>
+							Esci
+						</button>
+						<button
+							type="button"
+							class="btn btn-primary"
+							id="btnCreateStudent"
+							data-dismiss="modal"
+						>
+							Crea studente
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="module" src="register.js"></script>
+		<script type="module" src="student.js"></script>
+		<script type="module" src="controller.js"></script>
+	</body>
 </html>
